--- a/client/src/app/components/community-cards/community-cards.component.html
+++ b/client/src/app/components/community-cards/community-cards.component.html
@@ -1,3 +1,5 @@
-<div class="community-cards-container">
-  <div class="card-placeholder" *ngFor="let card of cardsToShow"></div>
+<div class="community-cards">
+  <div *ngFor="let card of cards" class="card">
+    <div class="card-back"></div>
+  </div>
 </div>
